deploy/base/service.yml
kind: Service
apiVersion: v1
metadata:
  name: ecommerce-shop-ui
spec:
  selector:
    app: ecommerce-shop-ui
  ports:
    - protocol: TCP
      targetPort: 3000
      port: 80
